bin/testsuite/tests/compiler/src/errors/compiler3102.swg
#global testerror "Err0309"

#[Swag.CalleeReturn]
#test
{
}
